{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 9,
  "lineage": "b7dd9dae-f1bb-51cc-2f20-c8b8688fe7ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "two_tier_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ff90cca06976fc4d",
            "owner_id": "135928476890",
            "tags": {
              "Name": "2tier-app-vpc"
            },
            "vpc_id": "vpc-0927a5b0f70716d2b"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table_pri",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010ba5f5ea2f2461f",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "2tier-app-vpc-pri"
            },
            "vpc_id": "vpc-0927a5b0f70716d2b"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dbe637b66a45277e",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff90cca06976fc4d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "2tier-app-vpc-pub"
            },
            "vpc_id": "vpc-0927a5b0f70716d2b"
          },
          "dependencies": [
            "aws_internet_gateway.two_tier_gw",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_assoc",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03403c9016e09db63",
            "route_table_id": "rtb-0dbe637b66a45277e",
            "subnet_id": "subnet-0529673f3e59808cd"
          },
          "dependencies": [
            "aws_internet_gateway.two_tier_gw",
            "aws_route_table.app_route_table_pub",
            "aws_subnet.two_tier_subnet_pub",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pri_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0addf299c4b174dcd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0addf299c4b174dcd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200128203626365900000002",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "2tier-app-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0927a5b0f70716d2b"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0cea1d6f475b7aba9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cea1d6f475b7aba9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200128203626364800000001",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "2tier-app-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0927a5b0f70716d2b"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two_tier_subnet_pri",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0ff3ecf4d3e27769b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ff3ecf4d3e27769b",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "2tier-app-vpc-pri"
            },
            "vpc_id": "vpc-0927a5b0f70716d2b"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two_tier_subnet_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0529673f3e59808cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0529673f3e59808cd",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "2tier-app-vpc-public"
            },
            "vpc_id": "vpc-0927a5b0f70716d2b"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "two_tier_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0927a5b0f70716d2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b5760648ce36f79",
            "default_route_table_id": "rtb-03d7ce1f7d6f46375",
            "default_security_group_id": "sg-0a092e2cc4dc66b39",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0927a5b0f70716d2b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d7ce1f7d6f46375",
            "owner_id": "135928476890",
            "tags": {
              "Name": "2tier-app-vpc"
            }
          }
        }
      ]
    }
  ]
}